--- a/index.html
+++ b/index.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objetivos do Ano</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Meus Objetivos Para Este Ano</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Objetivos do Ano</h1>
-    </header>
-    <nav>
-        <a href="#" onclick="scrollToSection('academia')">Começar a fazer academia</a>
-        <a href="#" onclick="scrollToSection('riqueza')">Ficar rico</a>
-        <a href="#" onclick="scrollToSection('curso')">Começar um curso</a>
-    </nav>
-    <section id="academia">
-        <h2>Começar a fazer academia</h2>
-        <p>Meu objetivo é começar a frequentar a academia regularmente para melhorar minha saúde e condicionamento físico.</p>
-    </section>
-    <section id="riqueza">
-        <h2>Ficar rico</h2>
-        <p>Quero aumentar minha riqueza através de investimentos inteligentes, economia e desenvolvimento de habilidades financeiras.</p>
-    </section>
-    <section id="curso">
-        <h2>Começar um curso</h2>
-        <p>Desejo iniciar um curso para aprimorar minhas habilidades profissionais ou aprender algo novo que possa me ajudar na carreira.</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 [Jean Carlos De Oliveira Lima]. Todos os direitos reservados.</p>
-    </footer>
-    <script src="main.js"></script>
+<section class="conteudo-principal"></section>
+<h2 class="titulo-principal">Meus Objetivos Para Este Ano<span>_</span></h2>
+<div class="botoes">
+<button class="botao">Fazer Academia Pra Ficar Bombado</button>
+<button class="botao">Ficar Rico</button>
+<button class="botao">Começar a Fazer um curso</button>
+<button class="botao">Cometer Suicidio</button>
+
+</div>
+
 </body>
 </html>
